--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
-
+<!-- 목적 달성 시 center 옆에 done 누르기 -->
 <body class="bg-t3 center">
     <h1 class="title">2023 신년계획</h1>
     <p class="msg"> 올해는 80% 이상 달성하기</p>
